belum fixed class TodoList

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MyLibrary.classpath}
+    ${libs.MyLibrary.classpath}:\
+    ${libs.MyLibrary_2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
